Changes:

Release 1.6 -- in development (compared to 1.5)
-----------------------------------------------
Language, standard libary, and compiler changes (for shader writers):

API changes, new options, new ShadingSystem features (for renderer writers):

Performance improvements:

Bug fixes and other improvements:
* oslinfo --param lets you ask for information on just one parameter of
  a shader. #397 (1.6.0)
* oslc now properly catches and issues error messages if you define a struct
  with duplicate field names. #398 (1.6.0)

Under the hood:

Build & test system improvements and developer goodies:
* Windows build fix for compiling shaders finding the right oslc.exe.
  #399 (1.6.0/1.5.11)

Documentation:



Release 1.5.11 -- ?? (compared to 1.5.10)
-----------------------------------------
* Windows compilations fixes for very MSVC 2013.



Release 1.5 -- Release candidate July 30, 2014 (compared to 1.4)
----------------------------------------------
Language, standard libary, and compiler changes (for shader writers):
* New closure function for microfacet BSDFs:
    closure color microfacet (string distribution, normal N,
                              float alpha, float eta, int refract)
    closure color microfacet (string distribution, normal N, vector U,
                          float xalpha, float yalpha, float eta, int refract)
  These replace the growing zoo of microfacet_blah functions (using
  different distribution values such as "beckmann" or "ggx", as well as
  selecting refraction when refract!=0). The old varieties are now considered
  deprecated and will eventually be removed (but will alow back-compatibility
  of compiled oso files).
* Remove documentation about unimplemented hash() function -- it was never
  implemented, and we can't figure out what it's good for. (#359) (1.5.7)
* Documented the specific names that should be used with getattribute() to
  retrieve common camera parameters. We should expect these to be the same