@@ -240,6 +240,13 @@ public:
     ///   int unknown_textures_needed  Nonzero if additional textures may be
     ///                                needed, whose names can't be known
     ///                                without actually running the shader.
+    ///   int num_closures_needed    The number of named closures needed.
+    ///   ptr closures_needed        Retrieves a pointer to the ustring array
+    ///                                containing all closures known to be
+    ///                                needed.
+    ///   int unknown_closures_needed  Nonzero if additional closures may be
+    ///                                needed, whose names can't be known
+    ///                                without actually running the shader.
     ///   int num_userdata           The number of "user data" variables
     ///                                retrieved by the shader.
     ///   ptr userdata_names         Retrieves a pointer to the array of
