@@ -351,7 +351,9 @@ private:
     int m_local_unknown_message_sent;   ///< Non-const setmessage in this inst
     std::vector<ustring> m_local_messages_sent; ///< Messages set in this inst
     std::set<ustring> m_textures_needed;
+    std::set<ustring> m_closures_needed;
     bool m_unknown_textures_needed;
+    bool m_unknown_closures_needed;
     std::set<UserDataNeeded> m_userdata_needed;
     double m_stat_opt_locking_time;       ///<   locking time
     double m_stat_specialization_time;    ///<   specialization time
